<resources>
    <string name="app_name">Discord</string>
    <string name="welcome">Welcome to</string>
    <string name="loadingtip">Loading Discord</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="customcss">Custom CSS</string>
    <string name="customcssdesc">Change UI elements with CSS files</string>
    <string name="first_fragment_label">First fragment</string>
    <string name="second_fragment_label">Second fragment</string>
    <string name="colormode">Dark mode</string>
    <string name="sourcecode">Source code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="cssfiles">CSS files</string>
    <string name="addfile">Add a CSS file</string>
    <string name="themeprefs">Theme preferences</string>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://discord.gg/.well-known/assetlinks.json\" }]</string>
    <string name="themeprefsdesc">Customize the interface with themes</string>
    <string name="deftheme">Default theme settings</string>
    <string name="amoled">Black dark mode</string>
    <string name="color">Color mode</string>
    <string name="theme">App theme</string>
    <string name="ui">Interface</string>
    <string name="reload">Reload</string>
    <string name="settings">Settings</string>
    <string name="prefcall">Prefere call mode</string>
    <string name="misc">Miscellaneous</string>
</resources>