<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="prefscreen" >
    <SwitchPreference
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:defaultValue="false"
        android:key="enabled"
        android:title="@string/customcss" />
    <PreferenceCategory
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/cssfiles"
        app:key="cssfiles">
        <Preference
            android:id="@+id/addfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_add_24"
            app:key="addfile"
            app:title="@string/addfile">

        </Preference>
    </PreferenceCategory>
</PreferenceScreen>